--- a/paginas/faqs.html
+++ b/paginas/faqs.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>faqs</title>
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/estilos.css">
@@ -23,19 +25,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
             <ul class="nav nav_pills italica textoderecha" >
-                <li class="nav-item">
+                <li class="nav-item" style="background-color: #FFFF">
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="background-color: #FFFF">
                     <a class="nav-link active" aria-current="page" href="../paginas/nosotros.html">Nosotros</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="background-color: #FFFF">
                     <a class="nav-link active" aria-current="page" href="../paginas/serivicios.html">Servicios</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="background-color: #FFFF">
                     <a class="nav-link active" aria-current="page" href="../paginas/faqs.html">FAQs</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="background-color: #FFFF">
                     <a class="nav-link active" aria-current="page" href="../paginas/contacto.html">Contacto</a>
                 </li>
             </ul>
@@ -44,24 +46,52 @@
     </header>
     <main class="main">
    <section class="faqs">
-<div>
-    <h2> Pregunta 1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus repudiandae veritatis assumenda aliquid soluta doloribus illo praesentium nihil, fugit qui sapiente iste ratione inventore, quaerat dignissimos quia cupiditate veniam?
+    <div class="container">
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Pregunta 1
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus repudiandae veritatis assumenda aliquid soluta doloribus illo praesentium nihil, fugit qui sapiente iste ratione inventore, quaerat dignissimos quia cupiditate veniam?
 
-    </p>
-</div>
-<div>
-    <h2>Preunta 2</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus sunt iure eveniet, animi consectetur error dolore deleniti modi ea at, nemo exercitationem qui! Ratione quas dicta ad tenetur minus perferendis?
+                </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Pregunta 2
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus sunt iure eveniet, animi consectetur error dolore deleniti modi ea at, nemo exercitationem qui! Ratione quas dicta ad tenetur minus perferendis?
 
-    </p>
-</div>
-<div>
-    <h2>Pregunta 3</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut doloribus optio dicta temporibus unde, maiores quasi minus sint expedita sed quia facere! Sunt, nulla repellendus ex saepe vel natus esse.
+                </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Pregunta 3
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut doloribus optio dicta temporibus unde, maiores quasi minus sint expedita sed quia facere! Sunt, nulla repellendus ex saepe vel natus esse.
 
-    </p>
-</div>
+                </p>
+             </div>
+          </div>
+        </div>
+      </div>
+    </div>
    </section>
 
 </main>
@@ -77,13 +107,20 @@
         <img src="../imagenes/instagram-brands.svg" alt="instagram">
     </a>
 </div>
-
+<br><br><br><br><br><br><br><br>
     <footer class="footer">
         <p>Derechos reservados - Dra Belkys</p>
         <img src="../imagenes/Logo.jpg" alt="logo de Dra Belkys" width="100" height="100">
         
   
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
+
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
