--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-12 col-md-8">
                 <div class="text-center align-middle">
-                <title><h1>Medicina Estetica</h1></title>
+                <h1>Medicina Estetica</h1>
         <p class="seccion1__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, beatae error incidunt perspiciatis voluptates repellendus minus corporis odio amet quo non ex omnis inventore esse deserunt fuga doloribus architecto laboriosam!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam sed, et sit similique sequi quod inventore magnam! Eos, delectus fugit natus voluptatem laborum, animi, dolor sint voluptatibus suscipit maiores esse?
     </p>
