--- a/paginas/serivicios.html
+++ b/paginas/serivicios.html
@@ -50,7 +50,7 @@
 
    <section>
     <section>
-    <title><h2>Botox</h2></title>
+    <h2>Botox</h2>
     <div class="servicio_1">
         <img src="../imagenes/Servicio1.jpg" alt="servicio1" width="200" height="200">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium exercitationem omnis autem velit similique distinctio mollitia nostrum repudiandae non repellat quibusdam officiis eum eveniet esse reprehenderit impedit modi, officia quia.
@@ -59,7 +59,7 @@
     </div>
     </section>
     <section>
-        <title><h2>Peeling</h2></title>
+        <h2>Peeling</h2>
     <div class="servicio_2">
         <img src="../imagenes/Servicio2.jpg" alt="servicio2" width="200" height="200">
         
@@ -69,7 +69,7 @@
     </div>
     </section>
     <section>
-        <title><h2>Toxina Botulinica</h2></title>
+        <h2>Toxina Botulinica</h2>
     <div class="servicio_3">
         <img src="../imagenes/Servicio3.jpg" alt="servicio3" width="200" height="200">
         
